# RISCV-CPU-simulator

./: .gitignore  CMakeLists.txt  README.md  branchreport.md  control.cpp  control.hpp  init.cpp  init.hpp  main.cpp  memory.cpp  memory.hpp  naive.cpp  pc.cpp
src/: calculate.cpp  calculate.hpp  control.cpp  control.hpp  globals.hpp  memory.cpp  memory.hpp  mySTL.hpp  run.cpp  run.hpp  storage.cpp  storage.hpp
src/header/: CDBselector.hpp  Decoder.hpp  Executor.hpp  PC.hpp  Predictor.hpp  ROB.hpp  RS.hpp  RegFile.hpp  memory.hpp  run.hpp  utils.hpp
src/program/: CDBselector.cpp  Decoder.cpp  Executor.cpp  PC.cpp  Predictor.cpp  ROB.cpp  RS.cpp  RegFile.cpp  memory.cpp  run.cpp  utils.cpp
